--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
+    "axios": "^1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-svg": "^13.14.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^10.0.1"
   },
   "devDependencies": {
