--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "react-native": "0.72.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-google-maps-directions": "^2.1.1",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.8.0",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^13.14.0",
