--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.8.0",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^13.14.0",
     "react-native-svg-charts": "^5.4.0",
-    "react-native-vector-icons": "^10.0.1"
+    "react-native-vector-icons": "^10.0.1",
+    "react-native-vision-camera": "^3.6.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
